# cryptogram2remarkable

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
deploy/: bootstrap.sh
src/cryptogram2remarkable/: __init__.py  browser.py  cli.py  config.py  errors.py  model.py  normalize.py  pipeline.py  render_pdf.py  scrape.py  session.py  upload.py
systemd/: cryptogram2remarkable.service  cryptogram2remarkable.timer
tests/: test_normalize.py  test_render.py
tests/fixtures/: build_fixtures.py  sample_raw.json
